name:                schememilk
version:             0.1.0
synopsis:            DB schema version magagement tool inspired by migr8
-- description:         
homepage:            https://github.com/philopon/schememilk
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  other-modules:       Database.Schememilk.Internal
  build-depends:       base                 >=4.6  && <4.8
  ghc-options:         -Wall -O2
  -- hs-source-dirs:      
  default-language:    Haskell2010
