name:                schememilk-bin
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/philopon/schememilk
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable schememilk
  main-is:             main.hs
  other-extensions:    OverloadedStrings
                       AutoDeriveTypeable
  build-depends:       base                  >=4.6  && <4.8
                     , text                  >=1.1  && <1.2
                     , system-fileio         >=0.3  && <0.4
                     , system-filepath       >=0.4  && <0.5
                     , bytestring            >=0.10 && <0.11
                     , yaml                  >=0.8  && <0.9
                     , process               >=1.2  && <1.3
                     , optparse-applicative  >=0.9  && <0.10
                     , schememilk            >=0.1  && <0.2
                     , schememilk-sqlite     >=0.1  && <0.2
                     , schememilk-postgresql >=0.1  && <0.2
  ghc-options:         -Wall -O2
  -- hs-source-dirs:      
  default-language:    Haskell2010
