name:                schememilk-postgresql
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/philopon/schememilk
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Database.Schememilk.PostgreSQL
  other-extensions:    OverloadedStrings
  build-depends:       base                 >=4.6  && <4.8
                     , schememilk           >=0.1  && <0.2
                     , postgresql-simple    >=0.4  && <0.5
                     , text                 >=1.1  && <1.2
  ghc-options:         -Wall -O2
  -- hs-source-dirs:      
  default-language:    Haskell2010
